# dynamixel_description

./: README.md  package.xml
urdf/: dynamixel_ax12.xacro
